[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Dummy.png" type="Texture" id=1]
[ext_resource path="res://Assets/Minigames/LightBackground.png" type="Texture" id=2]
[ext_resource path="res://Src/Minigames/PhotoMinigame/PhotoMinigame.gd" type="Script" id=3]
[ext_resource path="res://Src/Minigames/PhotoMinigame/Camera.gd" type="Script" id=4]
[ext_resource path="res://Assets/Minigames/sevenSegment.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/MenuTitle.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.4062, 8.40952 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0, 0 )

[node name="PhotoMinigame" type="Node2D"]
z_index = 60
script = ExtResource( 3 )
targetTexture = ExtResource( 1 )
countDownTime = 34

[node name="Camera" type="Area2D" parent="."]
position = Vector2( 265.413, 53.7889 )
z_index = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Camera"]
position = Vector2( -39.5, -25.162 )
scale = Vector2( 0.746914, 0.475793 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera"]
position = Vector2( -39, -24 )
shape = SubResource( 1 )

[node name="Target" type="Area2D" parent="." groups=[
"Target",
]]
position = Vector2( 146.167, 89.2939 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Target"]
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CountdownSprites" type="Node2D" parent="."]
position = Vector2( 167.895, 15.9245 )
z_index = 7

[node name="Time1" type="Sprite" parent="CountdownSprites"]
position = Vector2( -4, 0 )
texture = ExtResource( 5 )
hframes = 12

[node name="Time2" type="Sprite" parent="CountdownSprites"]
position = Vector2( 4, 0 )
texture = ExtResource( 5 )
hframes = 12

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 240.384, 68.3927 )
scale = Vector2( 0.582179, 0.444074 )
texture = ExtResource( 6 )
